--- a/public/stylesheets/ats.css
+++ b/public/stylesheets/ats.css
@@ -49,8 +49,8 @@
 .sale_price {
   font-size: 20pt;
   text-align: center;
-  color: blue;
-  text-shadow: 2px 2px 5px gray;
+  color: rgba(3, 3, 100, 0.8);
+  text-shadow: 2px 2px 5px white;
 }
 cart_table {
   border-collapse: collapse;
