--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,3 +1,4 @@
+<%= @test %>
 <%= form_tag "/carts/1", method: "PATCH" do %>
 <h2 style="color: rgba(3, 3, 100, 0.8)">Product List</h2>
 <div class="row pad">
