--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -20,7 +20,7 @@
             <td><%= p.name.titleize %></td>
             <td style="text-align: right">$<%= "%.2f" % cart.price %></td>
             <td style="text-align: right"><h4><%= text_field_tag "quantity_#{p.id}", cart.quantity, size: 1 %></h4></td>
-            <td><%= button_tag "update", name: "product_id", value: p.id %></h5></td>
+            <td><h5><%= button_tag "update", name: "product_id", value: p.id %></h5></td>
             <%= hidden_field_tag "button", "update" %>
           <% end %>
             <% if @carts != false %>
