--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -13,15 +13,14 @@
     </div>        
  <div class="col-md-4">
       <h3><%= label_tag "password_confirmation" %><br>
-      <%= password_field_tag "password_confirmation" %><br></br>
+          <%= password_field_tag "password_confirmation" %><br></br>
       
-      <%= label_tag "email_address" %><br>
-      <%= text_field_tag "email_address" %><br></br>
+          <%= label_tag "email_address" %><br>
+          <%= text_field_tag "email_address" %><br></br> 
+      </h3> 
 </div>
  <div class="col-md-4">
-
-      <%= submit_tag "Sign up", size: 40 %>
-    </h3>  
+    <input class="btn btn-primary" name="commit" type="submit" value="Sign up">
   </div> 
 </div>
 </div>
