--- a/app/views/admin/edit_product.html.erb
+++ b/app/views/admin/edit_product.html.erb
@@ -21,8 +21,8 @@
     <h3>
       <%= label_tag "category", "Product Category" %><br>
       <%= select_tag "category", options_for_select([
-      "Diamond Products", "Safety Equipment", "Sand Paper", "Glues & Sealer",
-      "Wet & Dry Pads", "Other Products"], @old_product.category), prompt: "Choose product category..." %><br></br>
+      "Diamond Products", "Safety Equipment", "Abrasives", "Glues & Sealer",
+      "Pads", "Other Products"], @old_product.category), prompt: "Choose product category..." %><br></br>
 
   
       <%= label_tag "product_code", "Product Code" %><br>
