--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -22,6 +22,7 @@
       <% if user == nil %>
         <% user = User.find_by(username: "new") %>
       <% end %>
+    <% user = User.find_by(username: session[:username])%>
       <% if user.username == "wendy" %>
         <a href="/admin">Admin Links</a>
       <% end %>
