ATSrails_ another try to fix home page view of admin links

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,9 +20,8 @@
   <% if session[:username] != "" %>
     <% user = User.find_by(username: session[:username])%>
       <% if user == nil %>
-        <% user = User.find_by(username: "new") %>
+        <% user.username = User.find_by(username: "new") %>
       <% end %>
-    <% user = User.find_by(username: session[:username])%>
       <% if user.username == "wendy" %>
         <a href="/admin">Admin Links</a>
       <% end %>
