ATSrails_ added zoom affect, works on home page

--- a/app/views/main/more_info.html.erb
+++ b/app/views/main/more_info.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-12">
       <table> 
         <th>
-          <a class="a:hover" href='/images/<%= @product.image %>.jpg/'>
+          <a href='/images/<%= @product.image %>_big.jpg/'>
             <img src="/images/<%= @product.image %>.jpg/" width="350" height="350"></img>
           </a>
         </th>
