--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -10,13 +10,13 @@
   <div class="col-md-12" >
     <table>       
       <td><p class="pad"><%= image_display (p) %></pad></td>
-      <td><b><h3 class="pad" style="color: #550808"><%= p.name.titlecase %></h3></b>
+      <td><b><h3 class="pad" style="color: #550808; text-shadow: 2px 1px 1px white;"><%= p.name.titlecase %></h3></b>
         <b><center><p style="color=black"><i>price  </i>$<%= "%.2f" % p.price %></p></center></b>
         
           <% CategorySale.where(category_id: p.category_id).each do |sale| %>
             <% if sale.percent_off > 1 %>
               <% price = (p.price) * ((100 - sale.percent_off)/100) %>
-                <p class="sale_price"><%= "Sales Price! $ #{"%.2f" % price}" %></p>
+                <p class="sale_price"><%= "Sale Price! $ #{"%.2f" % price}" %></p>
                 <h4 class="pad" style="color: black"><%= p.description.capitalize %></h4>
                 <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                   More details and applications...</a></h5>
@@ -24,7 +24,7 @@
             <% else %>
               <% if p.percent_off > 1 %>
                 <% price = (p.price) * ((100-p.percent_off)/100) %>
-                <p class="sale_price"><%= "Sales Price! $ #{"%.2f" % price}" %></p>
+                <p class="sale_price"><%= "Sale Price! $ #{"%.2f" % price}" %></p>
                 <h4 class="pad" style="color: black"><%= p.description.capitalize %></h4>
                 <h5><a class="pad" href="/main/more_info/<%= p.id %>" style="color: rgba(6, 72, 133, 0.85)">
                   More details and applications...</a></h5>
@@ -37,7 +37,7 @@
               <% end %>
             <% end %>   
              </td>
-          <hr style="color: white">
+        <hr style="background-color:white;height:2px;border:none;" />
     </table>  
             <% end %> 
 </div> 
