--- a/public/stylesheets/ats.css
+++ b/public/stylesheets/ats.css
@@ -12,7 +12,7 @@
 .body_b {
   width: 1000px;
   margin: 5px auto;
-  background-color: rgba(0, 0, 0, 0.16);
+  background-color: rgba(95, 162, 156, 0.36);
   border: 10px black solid;
   padding: 5px;
   font-family: sans-serif;
@@ -65,6 +65,16 @@ height: 230px;
 margin: 10px;
 overflow: hidden;
 width: 275px;
+cursor:pointer;
+}
+.image_big{
+border: 10px solid #FFFFFF;
+box-shadow: 5px 5px 5px  #550808;
+float: left;
+height: 380px;
+margin: 10px;
+overflow: hidden;
+width: 400px;
 cursor:pointer;
 }
 
