ATSrails_ added a calculation to the cart to charge the sales price instead of regular price if product is on sale

--- a/app/views/admin/product_sale.html.erb
+++ b/app/views/admin/product_sale.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <div class="pad">
-  <h2> Edit Category of Product on Sale </h2>
+  <h2> Edit Product on Sale </h2>
 <div class="row">
   <div class="col-md-3">
     <h3>
