ATSrails_ created a view of orders for shipping needs

--- a/app/views/admin/links.html.erb
+++ b/app/views/admin/links.html.erb
@@ -1,6 +1,7 @@
 <%= render "layouts/admin" %>
 <ul>
-  <h2><li><a style="color: #927017" href="/admin/new">add a new product</a></li>
+  <h2><li><a style="color: #927017" href="/admin/orders">view orders for shipping</a></li>
+      <li><a style="color: #927017" href="/admin/new">add a new product</a></li>
       <li><a style="color: #927017" href="/admin/:id/edit">edit and existing product</a></li>
       <li><a style="color: #1E5A53" href="/admin/product_sale">put a single product on sale</a></li>
       <li><a style="color: #1E5A53" href="/admin/category_sale">put an entire category on sale</a></li>
