ATSrails_ some changes to allow other users to test on heroku

--- a/app/views/admin/links.html.erb
+++ b/app/views/admin/links.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/admin" %>
 <ul>
-  <h2><li><a style="color: #927017" href="/admin/orders">view orders for shipping</a></li>
+  <h2><li><a style="color: rgba(3, 3, 100, 0.8)" href="/admin/orders">view orders for shipping</a></li>
       <li><a style="color: #927017" href="/admin/new">add a new product</a></li>
       <li><a style="color: #927017" href="/admin/:id/edit">edit and existing product</a></li>
       <li><a style="color: #1E5A53" href="/admin/product_sale">put a single product on sale</a></li>
