--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -21,6 +21,8 @@
 </div>
 </div>
 
-<h4>(Testing: username: wendy password: 1234)</h4>
+<h4><i>(Admin Testing username: <b>wendy</b> password: <b>1234</b> or create account to test e-mails)
+    <br></br>(Admin link at the bottom left of the home page if signed in as "wendy")</i>
+</h4>
 
 <% end %>
