--- a/app/views/admin/view_orders.html.erb
+++ b/app/views/admin/view_orders.html.erb
@@ -39,8 +39,8 @@
             <tr> 
           <% end %>
         <% end %> 
-          <td><%= "<b>tax</b>: $#{"%.2f" % orders.last.tax} <b>ship_cost</b>: $#{"%.2f" % orders.last.ship_cost} 
-            <b>total</b>: $#{"%.2f" % orders.last.order_total}".html_safe %></td><br></br>
+          <tr><td><%= "<b>tax</b>: $#{"%.2f" % orders.last.tax} <b>ship_cost</b>: $#{"%.2f" % orders.last.ship_cost} 
+          <b>total</b>: $#{"%.2f" % orders.last.order_total}".html_safe %></td></tr>
     <% end %>
   <% end %>
   </table>
