ATSrails_added fields in final_cart view for future payment process

--- a/app/views/carts/final_cart.html.erb
+++ b/app/views/carts/final_cart.html.erb
@@ -53,39 +53,32 @@
         <%= "Order total:    $#{"%.2f" % (order_total)}" %>
         <%= hidden_field_tag "order_total", order_total %>
       </b></h4></td></tr></h4>
-  </table><br>
+  </table>   
 </div>
+<hr>
+<div class="pad pull-left">
+  <h5>Enter Payment Info:<br></br>
+    <div class="cols-md-3 pull-left">
+     <%= label_tag :number, "Credit Card Number" %>
+     <%= text_field_tag :number,'4111111111111111' %><br></br>
+     <%= label_tag :month, "Month of Expiration" %> 
+     <%= text_field_tag :month,'8' %><br></br>
+     <%= label_tag :year, "Year of Expiration" %>
+     <%= text_field_tag :year, '2009' %><br></br>
+    </div>
+    <div class="cols-md-3 pull-right">
+     <%= label_tag :first_name, "First Name" %>
+     <%= text_field_tag :first_name,'Tobias' %><br></br>
+     <%= label_tag :last_name, "Last Name" %>
+     <%= text_field_tag :last_name, 'Luetke' %><br></br>
+     <%= label_tag :verification_value, "Security Code" %>
+     <%= text_field_tag :verification_value, '123'%>
+  </h5>
+ </div>
+ </div>
 </div>
-
-<!--
-<h1>Order</h1>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Product Name</th>
-      <th>Quantity</th>
-      <th>Price</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @carts.each do |cart| %>
-    <% p = Product.find(cart.product_id) %>
-      <tr>
-      <% if cart.quantity != 0 %>
-        <td><%= p.name %></td>
-        <td><%= cart.quantity %></td>
-        <td>$<%= "%.2f" % cart.price %></td>
-      <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
---!>
-****TODO: Select payment method  ******
-<%= button_tag 'Place Order' %><br><br>
+<center>
+  <input class="btn btn-danger" name="Place Order" type="submit" value="Place Order"><br></br>
+</center>
 <% end %>
 
