--- a/public/stylesheets/ats.css
+++ b/public/stylesheets/ats.css
@@ -1,3 +1,4 @@
+
 .ats_header {
   font-size: 35pt;
   margin: 0px auto -2px auto;
@@ -18,7 +19,18 @@
   font-family: sans-serif;
   font-size: 16pt;
 }
-
+html {
+  background-color: #eee;
+}
+body {
+  width: 100000px;
+  margin: 5px auto;
+  background-color: gray;
+  border: 1px black solid;
+  padding: 5px;
+  font-family: sans-serif;
+  font-size: 16pt;
+}
 .admin {
   width: 1100px;
   margin: 5px auto;
